# python-stochastic-chatbot

./: README.md
bot/: chatbot.py  data.csv  parser.py  pyproject.toml  training.py  words.pkl
web/: chatbot.sqlite3  pyproject.toml
web/chatbot_web/: asgi.py  settings.py  urls.py  wsgi.py
web/main/: models.py  urls.py  views.py
web/main/migrations/: 0001_initial.py  0002_auto_20201226_1726.py
web/static/assets/css/: main.css
web/templates/: base.html  css.html  js.html
web/templates/main/: add-data.html  collected-data.html  index.html
