[tool.poetry]
name = "chatbot_web"
version = "0.1.0"
description = ""
authors = ["Harrys <xarhsasi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
